--- a/_config.yml
+++ b/_config.yml
@@ -67,13 +67,13 @@ navs:
     href: /categories/
     label: 分类
 
-#   -
-#     href: /archives/
-#     label: 归档
+  -
+    href: /archives/
+    label: 归档
 
-#   -
-#     href: /open-source/
-#     label: 开源
+  -
+    href: /open-source/
+    label: 开源
 
 #   -
 #     href: /wiki/
@@ -157,7 +157,7 @@ simple_jekyll_search:
 #      Google      #
 # ---------------- #
 google:
-    analytics_id: UA-80669434-1
+    analytics_id: UA-153706228-2
     adsense:
         footer: true
         sidebar: true 
